# praiser

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml  seed-orgs.txt
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
ghrecord/: __init__.py  __main__.py  cache.py  cli.py  config.py  discovery.py  github_client.py  identity.py  llm.py  models.py  pipeline.py  popularity.py  progress.py  registry.py  render.py
ghrecord/data/: __init__.py  known_projects.json
ghrecord/extractors/: __init__.py  authors.py  base.py  codeowners.py  contributors.py  enhancement_proposals.py  governance.py  maintainers.py  manifests.py  subcomponents.py  web_roles.py
praiser/: __init__.py  __main__.py  cache.py  cli.py  config.py  contribindex.py  crossforge.py  discovery.py  github_client.py  identity.py  llm.py  models.py  nameresolve.py  pipeline.py  popularity.py  progress.py  registries.py  registry.py  render.py  seed.py
praiser/data/: __init__.py  known_projects.json
praiser/extractors/: __init__.py  authors.py  base.py  codeowners.py  contributors.py  curated.py  enhancement_proposals.py  governance.py  llm_founders.py  maintainers.py  manifests.py  ownership.py  packages.py  releases.py  subcomponents.py  web_roles.py  wikidata.py  wikipedia.py
praiser/forge/: __init__.py  _http.py  base.py  bitbucket.py  cgit.py  gitea.py  gitee.py  github.py  gitlab.py
scripts/: snapshot_contributors.py
tests/: test_attribute.py  test_authors.py  test_bitbucket_forge.py  test_cache.py  test_cgit_forge.py  test_cli.py  test_codeowners.py  test_codeowners_scope.py  test_contribindex.py  test_contributor_count.py  test_contributors.py  test_crossforge.py  test_curated.py  test_discovery.py  test_enhancement_proposals.py  test_extractors_registry.py  test_file_fetch.py  test_forge_base.py  test_gitea_forge.py  test_gitee_forge.py  test_github_client.py  test_github_forge.py  test_gitlab_forge.py  test_governance.py  test_involvement.py  test_llm_founders.py  test_maintainers.py  test_manifests.py  test_manual_repos.py  test_multiforge.py  test_nameresolve.py  test_ownership.py  test_packages_extractor.py  test_pipeline_helpers.py  test_popularity.py  test_progress.py  test_registries.py  test_registry.py  test_releases.py  test_render.py  (+11 more)
web/: README.md  __init__.py  seed.py
web/core/: __init__.py  cache.py  resultcache.py  service.py
web/streamlit/: app.py  requirements.txt
